cluster/apps/splunk-enterprise/splunk-cluster/deployment-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk-ds-deployment-server
  namespace: splunk-enterprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: splunk-ds-deployment-server
      app.kubernetes.io/name: deployment-server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: deployment-server
        app.kubernetes.io/instance: splunk-ds-deployment-server
        app.kubernetes.io/name: deployment-server
        app.kubernetes.io/part-of: splunk-ds-deployment-server
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/instance
                      operator: In
                      values:
                        - splunk-ds-deployment-server
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: splunk
          hostname: splunk-ds-deployment-server-0
          image: docker.io/splunk/splunk:9.0.3-a2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http-splunkweb
              protocol: TCP
            - containerPort: 8089
              name: https-splunkd
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2500m
              memory: 4096Mi
          serviceAccount: default
          serviceAccountName: default
          livenessProbe:
            exec:
              command:
                - /mnt/probes/livenessProbe.sh
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            exec:
              command:
                - /mnt/probes/readinessProbe.sh
            failureThreshold: 6
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            exec:
              command:
                - /mnt/probes/startupProbe.sh
            failureThreshold: 20
            initialDelaySeconds: 40
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: splunk-ds-deployment-server-service
  namespace: splunk-enterprise
  labels:
    app.kubernetes.io/component: deployment-server
    app.kubernetes.io/instance: splunk-ds-deployment-server
    app.kubernetes.io/name: deployment-server
    app.kubernetes.io/part-of: splunk-ds-deployment-server
spec:
  selector:
    app.kubernetes.io/component: deployment-server
    app.kubernetes.io/instance: splunk-ds-deployment-server
    app.kubernetes.io/name: deployment-server
    app.kubernetes.io/part-of: splunk-ds-deployment-server
  type: ClusterIP
  ports:
    - name: http-splunkweb
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: https-splunkd
      port: 8089
      protocol: TCP
      targetPort: 8089
