cluster/apps/splunk-enterprise/splunk-cluster/deployment-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk-ds-deployment-server
  namespace: splunk-enterprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: splunk-ds-deployment-server
      app.kubernetes.io/name: splunk-ds-deployment-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: splunk-ds-deployment-server
        app.kubernetes.io/name: splunk-ds-deployment-server
    spec:
      containers:
        - name: splunk-ds-deployment-server-0
          image: docker.io/splunk/splunk:9.0.3-a2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http-splunkweb
              protocol: TCP
            - containerPort: 8089
              name: https-splunkd
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2500m
              memory: 4096Mi
---
apiVersion: v1
kind: Service
metadata:
  name: splunk-ds-deployment-server-service
  namespace: splunk-enterprise
spec:
  type: ClusterIP
  ports:
    - name: http-splunkweb
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: https-splunkd
      port: 8089
      protocol: TCP
      targetPort: 8089
