cluster/apps/splunk-enterprise/splunk-cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Splunk-SH"
    hajimari.io/icon: "mdi:splunk"
  name: splunk-sh-ingress
  namespace: splunk-enterprise
spec:
  rules:
    - host: "search.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk-single-standalone-service
                port:
                  number: 8000
  tls:
    - hosts:
        - "search.${SECRET_DOMAIN}"
      secretName: splunk-sh-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Splunk-IDX"
    hajimari.io/icon: "mdi:splunk"
  name: splunk-idx-ingress
  namespace: splunk-enterprise
spec:
  rules:
    - host: "index.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk-idxc-indexer-service
                port:
                  number: 8000
  tls:
    - hosts:
        - "index.${SECRET_DOMAIN}"
      secretName: splunk-idx-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Splunk-CM"
    hajimari.io/icon: "mdi:splunk"
  name: splunk-cm-ingress
  namespace: splunk-enterprise
spec:
  rules:
    - host: "cluster.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk-cm-cluster-manager-service
                port:
                  number: 8000
  tls:
    - hosts:
        - "cluster.${SECRET_DOMAIN}"
      secretName: splunk-cm-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Splunk-LM"
    hajimari.io/icon: "mdi:splunk"
  name: splunk-lm-ingress
  namespace: splunk-enterprise
spec:
  rules:
    - host: "license.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk-lm-license-manager-service
                port:
                  number: 8000
  tls:
    - hosts:
        - "license.${SECRET_DOMAIN}"
      secretName: splunk-lm-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Splunk-DS"
    hajimari.io/icon: "mdi:splunk"
  name: splunk-ds-ingress
  namespace: splunk-enterprise
spec:
  rules:
    - host: "deploy.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk-ds-deployment-server-service
                port:
                  number: 8000
  tls:
    - hosts:
        - "deploy.${SECRET_DOMAIN}"
      secretName: splunk-ds-tls
